<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ViewFlipper
            android:id="@+id/ViewFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" 
            android:padding="0dp">
			
			<TextView
                android:id="@+id/txtScore"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/score"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </ViewFlipper>
        
        <ProgressBar
            android:id="@+id/progBar"
	        style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ViewFlipper"
            android:layout_toRightOf="@+id/mainActivityLogo" 
            android:layout_alignBaseline="@+id/ViewFlipper"/>
        
        <ImageView
            android:id="@+id/mainActivityLogo"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo1001" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="16dp">
        
        <TextView
            android:id="@+id/scoBoStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/imageScoreProgBar"
            android:textSize="30sp"
            android:text="Attempts: \nSound hints: \nWord hints: \nImage score: "
            android:padding="16dp" 
            android:background="#CCC"
            android:textColor="@android:color/black"/>
        
        <edu.cis350.mosstalkwords.VerticalProgressBar
            android:id="@+id/imageScoreProgBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/scoBoStatistics"
            android:layout_marginRight="16dp"
            android:progress="50" />
        
	</RelativeLayout>
	
	<ImageSwitcher
        android:id="@+id/imgSwitcher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" >
    </ImageSwitcher>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="12dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/hintOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnHintSound"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight=".5"
                    android:background="@android:color/holo_green_dark"
                    android:padding="16dp"
                    android:text="@string/btnSound"
                    android:onClick="onSoundHintButtonClick"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnHintWord"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight=".5"
                    android:background="@android:color/holo_green_dark"
                    android:padding="16dp"
                    android:text="@string/btnWord"
                    android:onClick="onWordHintButtonClick"
                    android:textSize="30sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSpeak"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight=".3"
                android:background="@android:color/holo_green_dark"
                android:padding="16dp"
                android:text="@string/speak"
                android:onClick="onSpeakButtonClick"
                android:textSize="30sp" />

		</LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="16dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/next"
            android:textSize="30sp" 
            android:onClick="onNextButtonClick"
            android:layout_margin="4dp"/>
    </LinearLayout>

</LinearLayout>