<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_blue_dark" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:background="@android:color/white"
        android:padding="16dp" >
           
		<ImageView
        	android:id="@+id/logo"
        	android:layout_width="wrap_content"
       		android:layout_height="100dp"
        	android:src="@drawable/logo1001" 
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentRight="true"/>     
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/baseName"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:text="@string/user_name_base"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/baseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/textView2"
            android:inputType="textPersonName"
            android:textSize="30sp" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/baseEmail"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:text="@string/email_base"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/baseEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/baseName"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/textView3"
            android:inputType="textEmailAddress"
            android:textSize="30sp" >
        </EditText>

        <Button
            android:id="@+id/loginId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/baseEmail"
            android:layout_marginTop="16dp"
            android:onClick="login"
            android:text="@string/login"
            android:textSize="30sp" />
        
    </RelativeLayout>

</RelativeLayout>