<?xml version="1.0" encoding="utf-8"?>
<!-- not used yet -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/profileName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:singleLine="true"
            android:text="@string/user_name_base"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="normal"
            android:typeface="normal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/profileScore"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:singleLine="true"
            android:text="@string/prof_score"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="normal"
            android:typeface="normal" />
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

        
        
        <TextView
            android:id="@+id/profileEmblem"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="9"
            android:singleLine="true"
            android:text="@string/prof_emblem"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="normal"
            android:typeface="normal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/badge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/badge6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/badge10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />
    </TableRow>

               <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"  >


        <TextView 
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".33" /> 
        <Button
            android:id="@+id/profileMenuId"
            android:text="@string/menu" 
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".33" />
        
        <TextView
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight=".33" />
           
        </TableRow>
    
        <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center" >

</TableRow>        

</LinearLayout>